- Added DX_CODETYPE to P1 Table 2.  #88

--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -255,6 +255,7 @@ tab2_dx_null <- run_query(
   paste0("SELECT SUM(CASE WHEN ENC_ID IS NULL THEN 1 ELSE 0 END) as ENC_ID,
    SUM(CASE WHEN ADATE IS NULL THEN 1 ELSE 0 END) as ADATE,
    SUM(CASE WHEN DX IS NULL THEN 1 ELSE 0 END) as DX,
+   SUM(CASE WHEN DX_CODETYPE IS NULL THEN 1 ELSE 0 END) as DX_CODETYPE,
    SUM(CASE WHEN PRINCIPAL_DX IS NULL THEN 1 ELSE 0 END) as PRINCIPAL_DX,
    SUM(CASE WHEN PRIMARY_DX IS NULL THEN 1 ELSE 0 END) as PRIMARY_DX
       FROM ", diagnoses))
