--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -2533,9 +2533,9 @@ kable(tab9_all, col.names = c("Year", "Total Number of Recorded Encounters", "Pe
 
 ```{r encounter types by year and month, echo = F, include=T, error=T}
 encEncType_YM  <- sqlQuery(tempCon3,
-                 paste('SELECT aMon, aYear, encType, count(*) as rowCnt',
-                       'FROM #encTmp',
-                       'GROUP BY aMon, aYear, encType',
+                 paste0("SELECT aMon, aYear, encType, count(*) as rowCnt
+                        FROM #encTmp
+                        GROUP BY aMon, aYear, encType",
                        sep=" "
                        ),
                  as.is=c(TRUE,TRUE,TRUE,TRUE,TRUE),
@@ -2584,9 +2584,9 @@ encByYear$aYear <- as.character(encByYear$aYear)
 
 ```{r uniqPatByYear, echo = F, include=T, error=T}
 uniqPatByYear <- sqlQuery(tempCon3,
-                 paste('SELECT aYear, count(distinct person_id) as Freq',
-                       'FROM #encTmp',
-                       'GROUP BY aYear',
+                 paste0("SELECT aYear, count(distinct person_id) as Freq
+                       FROM #encTmp
+                       GROUP BY aYear",
                        sep=" "
                        ),
                  as.is=c(TRUE,TRUE,TRUE,TRUE,TRUE),
@@ -2606,7 +2606,7 @@ odbcClose(tempCon3)
 
 
 ```{r add labels to encEncType_YM , echo = F, include=T, error=T, eval=T}
-encTypeBymonYr <- merge(encEncType_YM,encLabels, by.x='encType', by.y='code', all.x=TRUE) 
+encTypeBymonYr <- merge(encEncType_YM,encLabels, by.x='encType', by.y='code', all.x=TRUE)
 encTypeBymonYr <- within(encTypeBymonYr,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(encType), 'Missing', 'Invalid'))})
 ```
 
@@ -2748,7 +2748,7 @@ Month and year of last diagnosis: **`r format( as.Date(diagSumm$lastDT),"%B %Y")
 
 The following tables explore the contents of the DIAGNOSES table with a focus on trends over time and most common types of diagnoses.
 
-## Table 12. Annual Trends in the Total Number of Recorded Diagnoses, the Mean Number of Encounters, the Mean Number of Patients and the Percent Change from the Previous Year, by Calendar Year
+## Table 12. Annual Trends in the Total Number of Recorded Billing Diagnoses, the Mean Number of Encounters, the Mean Number of Patients and the Percent Change from the Previous Year, by Calendar Year
 
 This table examines the volume of diagnoses over time and the number of patients with encounters represented in the DIAGNOSES table. Average number of diagnoses per encounter, and per patient, are calculated to compare diagnosis volume trends over time.
 
@@ -2760,6 +2760,7 @@ tab12 <- run_query(
 	  count(distinct person_id) as npats
 	  from ", diagnoses, "
 	  where year(adate) >= 2005
+	    AND DX_ORIGIN in ('BI')
 	    group by year(adate)
       order by year(adate)"))
 tab12_avg_encts <- run_query( 
@@ -2767,6 +2768,7 @@ tab12_avg_encts <- run_query(
     count(*) as nrows
 	  from ", diagnoses, "
 	  where year(adate) >= 2005
+	    AND DX_ORIGIN in ('BI')
 	    group by year(adate), enc_id
       order by year(adate)")) %>% 
   arrange(year) %>% 
@@ -2781,6 +2783,7 @@ tab12_avg_pats <- run_query(
     count(*) as nrows
 	  from ", diagnoses, "
 	  where year(adate) >= 2005
+	    AND DX_ORIGIN in ('BI')
 	    group by year(adate), person_id
       order by year(adate)")) %>% 
   arrange(year) %>% 
@@ -2817,7 +2820,7 @@ tab_2_Last_Recent_Years <- tab_2_Last_Recent_Years_f()
 ```
 
 
-## Table 13. Summary  of the Ten Most Common Diagnosis Codes, by All or Ambulatory Encounter Type ( `r paste0(tab_2_Last_Recent_Years[0], " & ", tab_2_Last_Recent_Years[1])`)
+## Table 13. Summary  of the Ten Most Common Billing Diagnosis Codes, by All or Ambulatory Encounter Type ( `r paste0(tab_2_Last_Recent_Years[[1]], " & ", tab_2_Last_Recent_Years[[2]])`)
 
 These tables include information on the ten most common diagnoses recorded in your DIAGNOSES table. Data on diagnosis codes, types, counts and patients are presented for all encounters and for ambulatory only encounters (ENCTYPE=AV).
 
@@ -2829,7 +2832,8 @@ tab13_dxall <- run_query(
     count(*) as nrows_all,
     count(distinct person_id) as npats
 	  from ", diagnoses, "
-	  where YEAR(ADATE) IN (", tab_2_Last_Recent_Years_f[0],", ",tab_2_Last_Recent_Years_f[2], " )
+	  where YEAR(ADATE) IN (", tab_2_Last_Recent_Years[[1]],", ",tab_2_Last_Recent_Years[[2]], " )
+	    AND DX_ORIGIN in ('BI')
 	    group by dx, dx_codetype")) %>% 
   arrange(desc(nrows_all)) %>% 
   head(., 10) %>% 
@@ -2844,8 +2848,9 @@ tab13_dxav <- run_query(
     count(*) as nrows_av,
     count(distinct person_id) as npats_av
 	  from ", diagnoses, "
-      where ENCTYPE = 'AV'
-      YEAR(ADATE) IN (", tab_2_Last_Recent_Years_f[0],", ",tab_2_Last_Recent_Years_f[2], " )
+    where ENCTYPE = 'AV'
+      AND DX_ORIGIN in ('BI')
+      AND YEAR(ADATE) IN (", tab_2_Last_Recent_Years[[1]],", ",tab_2_Last_Recent_Years[[2]], " )
 	    group by dx, dx_codetype")) %>% 
   arrange(desc(nrows_av)) %>% 
   head(., 10) %>% 
@@ -2867,7 +2872,7 @@ kable(tab13_dxall, col.names = c("Diagnosis Code", "Code Type", "Diagnosis Descr
 kable(tab13_dxav, col.names = c("Diagnosis Code for AV", "Diagnosis Type for AV", "Diagnosis Description", "Number of Recorded Diagnosis for AV", "Number of Patients for AV"), format.args = list(big.mark = ","))
 ```
  
-## Table 14. Summary of the Ten Most Common Diagnoses by Diagnosis Code Type, Total Number of Recorded Diagnoses and Total Number of Recorded Patients
+## Table 14. Summary of the Ten Most Common Billing Diagnoses by Diagnosis Code Type, Total Number of Recorded Diagnoses and Total Number of Recorded Patients
 This table includes information on the ten most common diagnoses recorded in your DIAGNOSES table. Data on diagnosis codes, counts and patients are presented for ICD-9 and ICD-10.
 
 ```{r tab14_res, echo = F, include=T, error=T}
@@ -2878,6 +2883,7 @@ tab14_09 <- run_query(
     count(distinct person_id) as npats
 	  from ", diagnoses, "
 	    where dx_codetype = '09'
+	    AND DX_ORIGIN in ('BI')
       group by dx, dx_codetype
       order by nrows_all DESC"), as.is = c(TRUE, TRUE, FALSE, FALSE))
 tab14_10 <- run_query( 
@@ -2887,6 +2893,7 @@ tab14_10 <- run_query(
     count(distinct person_id) as npats
 	  from ", diagnoses, "
 	    where dx_codetype = '10'
+	    AND DX_ORIGIN in ('BI')
       group by dx, dx_codetype
       order by nrows_all DESC"),  as.is = c(TRUE, TRUE, FALSE, FALSE)) 
 
@@ -2922,10 +2929,11 @@ if (nrow(tab14_10) != 0){
 
 ```{r monthly counts by enc type, echo = F, include=T, error=T}
 dxByMonEncTp <- run_query(
-                      paste("SELECT YEAR(adate) as year, MONTH(adate) as month, enctype, count(*) as Freq",
-                            "FROM " ,diagnoses,
-                            "WHERE YEAR(adate) >= 2005",
-                            "GROUP BY YEAR(adate), MONTH(adate), enctype",
+                      paste0("SELECT YEAR(adate) as year, MONTH(adate) as month, enctype, count(*) as Freq
+	                            from ", diagnoses, "
+                             WHERE YEAR(adate) >= 2005
+                             AND DX_ORIGIN in ('BI')
+                             GROUP BY YEAR(adate), MONTH(adate), enctype",
                             sep=" "),
                  max=maxQryRows
                  )
@@ -2946,7 +2954,7 @@ fig4_timeTest <- within(fig4_timeTest,{decode <- ifelse(!is.na(decode),decode, i
 
 ```
 
-## Figure 4a. Count of Diagnoses by Year and Month in Ambulatory Encounters 
+## Figure 4a. Count of Billing Diagnoses by Year and Month in Ambulatory Encounters 
 
 ```{r Count of diagnoses by year and month in ambulatory encounters, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(dxByMonEncTp,enctype == 'AV'), aes(monYr, Freq)) + geom_line(size=.75) +
@@ -2954,7 +2962,7 @@ ggplot(subset(dxByMonEncTp,enctype == 'AV'), aes(monYr, Freq)) + geom_line(size=
   geom_point(data=subset(fig4_timeTest, iqrTest==T & outcome=='AV') %>% rename(monYr=testMonth, rowCnt=Freq2), aes(monYr, rowCnt))
 ```
 
-## Figure 4b. Count of Diagnoses by Year and Month, other Encounter Types
+## Figure 4b. Count of Billing Diagnoses by Year and Month, other Encounter Types
 
 ```{r Count of diagnoses by year and month other encounter types, echo = F, include=T, error=T, dpi=500, fig.height=5, fig.width=8.5}
 ggplot(subset(dxByMonEncTp,enctype != 'AV'), aes(monYr, Freq, colour=decode)) + geom_line(size=.75) +
