--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -3544,9 +3544,7 @@ endTime <- (Sys.time() - startTime)
 
 ### Total program run time: **`r format(round(endTime, 3))`**
 
-title: "P1 QA with new REL questions"\
-author: "Emily Bacon"\
-date: "10/23/2019"\
-output: word_document\
+title: "P1 QA March 2021"\
+
 
 ---
